Implement CICD build and push to github

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,16 @@
 name: Build and Push
 
-# on:
-#   push:
-#     branches:
-#       - main
-#       - development
-#       - feat*
-#     tags:
-#       - "v*"
-#   pull_request:
-#     branches:
-#       - 'master'
+on:
+  push:
+    branches:
+      - main
+      - development
+      - feat*
+    tags:
+      - "v*"
+  pull_request:
+    branches:
+      - 'master'
 
 env:
   REGISTRY: ghcr.io
